# bindle2oci

./: .gitignore  Cargo.toml  README.md  spin-pluginify.toml
.github/workflows/: build.yml
src/: main.rs
