[package]
name = "bindle2oci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive", "env"] }
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
spin-loader = { git = "https://github.com/adamreese/spin", branch = "bindle-auth" }
spin-oci = { git = "https://github.com/adamreese/spin", branch = "bindle-auth" }
tempfile = "3.8.0"

[dependencies.bindle]
git = "https://github.com/fermyon/bindle"
tag = "v0.8.2"
default-features = false
features = ["client"]

[patch.crates-io]
# Using fork to bump nested dep sqlite3-parser to 0.9.0 for Windows build fix
# Pending related upstream PR https://github.com/libsql/libsql-client-rs/pull/32
libsql-client = { git = "https://github.com/vdice/libsql-client-rs", branch = "chore/bump-deps"}